[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cgspace-url-checker"
version = "0.1.0"
description = "Split and validate URL fields in CGSpace metadata"
requires-python = ">=3.9"
dependencies = [
  "pandas",
  "requests"
]

[project.scripts]
cgspace-url-checker = "cgspace_url_checker.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}